Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104259

tst_seatv4 tests are failing with Ubuntu 22.04 Wayland

    XMLWordPrintable

Details

    • Linux/Wayland
    • 8b1f37cc801420157e94ce459fe22605f8cc486e(dev) 21e2255382 (qt/qtwayland/6.4) 8b1f37cc80 (qt/qtwayland/dev) 21e2255382 (qt/tqtc-qtwayland/6.4) 8b1f37cc80 (qt/tqtc-qtwayland/dev) cd66a6ca3a (qt/tqtc-qtwayland/5.15) 5a473d3706 (qt/tqtc-qtwayland/6.2)

    Description

      http://coin/coin/integration/qt/qt5/tasks/nightly1655114435

      http://coin/coin/api/results/qt/qtwayland/f2eaa48ce0921c1ebf03e8674ea03578dbc73095/LinuxUbuntu_22_04x86_64LinuxUbuntu_22_04x86_64GCCqtci-linux-Ubuntu-22.04-x86_64-50-cb4036Sccache_UseConfigure/8e492b34bf5a16c983acc4bc13fe66ba74197fc8/test_1655114968/log.txt.gz

      agent:2022/06/13 13:25:50 build.go:394: 10: FAIL! : tst_seatv4::unscaledFallbackCursor() Compared values are not the same
      agent:2022/06/13 13:25:50 build.go:394: 10: Actual (((exec([&]{ return cursorSurface()->m_committed.buffer->size() / cursorSurface()->m_committed.bufferScale; })))): QSize(48x48)
      agent:2022/06/13 13:25:50 build.go:394: 10: Expected (unscaledPixelSize) : QSize(32x32)
      agent:2022/06/13 13:25:50 build.go:394: 10: Loc: [/home/qt/work/qt/qtwayland/tests/auto/client/seatv4/tst_seatv4.cpp(447)]
      agent:2022/06/13 13:25:50 build.go:394: 10: FAIL! : tst_seatv4::unscaledFallbackCursor() '(isClean())' returned FALSE. (MockCompositor::WlCompositor: Dirty, surfaces left:
      agent:2022/06/13 13:25:50 build.go:394: 10: Surface with role: MockCompositor::SurfaceRole
      agent:2022/06/13 13:25:50 build.go:394: 10: Surface with role: none/unknown, MockCompositor::XdgWmBase: remaining xdg surfaces)
      agent:2022/06/13 13:25:50 build.go:394: 10: Loc: [/home/qt/work/qt/qtwayland/tests/auto/client/seatv4/tst_seatv4.cpp(90)]
      agent:2022/06/13 13:26:05 build.go:394: 10: FAIL! : tst_seatv4::bitmapCursor() '(exec([&]{ return cursorSurface(); }))' returned FALSE. ()
      agent:2022/06/13 13:26:05 build.go:394: 10: Loc: [/home/qt/work/qt/qtwayland/tests/auto/client/seatv4/tst_seatv4.cpp(477)]

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              liaqi Liang Qi
              hehalmet Heikki Halmet
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes