tests: fix tst_seatv4 to use 24 as default cursor size

Also set default cursor size to 24 for client, which is correct
both on KDE and GNOME at least.

Fixes: QTBUG-104259
Change-Id: Ie4ba27695974025b093a86d8c96fb23d25ad23f7
Reviewed-by: Inho Lee <inho.lee@qt.io>
Reviewed-by: David Edmundson <davidedmundson@kde.org>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 8b1f37cc801420157e94ce459fe22605f8cc486e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>